<resources>
    <string name="app_name">PrimerAppMovil</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="lema">E  scientia  hominis  salus</string>
    <string name="button_historia">Historia</string>
    <string name="button_Detalle">Detalle</string>
    <string name="button_Contacto">Contacto</string>
    <string name="button_Ventana2">Ventana Imagen</string>
    <string name="button_last_value">Last</string>
    <string name="lastvalue">None</string>
    <string name="button_load">El último registro ingresado es...</string>
    <string name="buton_save">Save</string>
    <string name="preference_file_key">com.example.helloworld.PREFERENCE_FILE_KEY</string>
</resources>
