<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.primerappmovil.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="VentanaImagen"
        android:text="@string/button_Ventana2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:text="TextView"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintRight_toLeftOf="@+id/button6"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="lastValue"
        android:text="@string/button_last_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="103dp"
        android:layout_height="36dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:onClick="saveKeyValue"
        android:text="@string/buton_save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />
</android.support.constraint.ConstraintLayout>
